--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "blogpost",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "start": "nodemon server.js",
     "tw": "npx tailwindcss -i ./public/css/input.css -o ./public/css/style.css --watch"
   },
   "keywords": [],
@@ -22,6 +23,7 @@
     "mysql2": "^3.6.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "tailwindcss": "^3.3.3"
   }
